# jupyter-fugue-iceberg

./: CLAUDE.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  start.sh
jupyter/: Dockerfile
notebooks/: benchmark_fugue_backends.ipynb  benchmark_native_backends.ipynb  sample_fugue_iceberg.ipynb
spark/apps/: generate_sample_data.py  verify_data.py
src/: Insert_Benchmark_Data_To_Iceberg.py  Insert_Customer_Order_Data_To_Iceberg.py
